added movies and images

--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Hobbies</title>
+    <title>My Movies</title>
 </head>
 <body>
     <h1>Home Page</h1>
     <p>
          <ul>
-        <li><a href="./brainnest-consulting.html">Brainnest Consulting</a></li>
-        <li><a href="./cooking-channel-tv.html">Cooking Channel</a></li>
-        <li><a href="./house-of-dragon.html">House of the dragon</a></li>
-        <li><a href="./usa-swimming.html">USA Swimming</a></li>
-            
-        
+            <li><a href="./Scandal.html">Scandal</a></li>
+            <li><a href="./The-Peripheral.html">The Peripheral</a></li>
+            <li><a href="./house-of-dragon.html">House of the dragon</a></li>
+            <li><a href="./Prison-Break.html">Prison Break</a></li>
         </ul>
     </p>
    
