--- a/house-of-dragon.html
+++ b/house-of-dragon.html
@@ -10,17 +10,14 @@
     <h1>House of the dragon</h1>
 
     <div>
-        <img src="https://static.hbo.com/2022-06/house-of-the-dragon-ka-1920.jpg" alt="House of the dragon cover image">
-    </div>
+        <img src="./images/house-of-dragon.jpeg" alt="dragon images">
 
     <div>
         <h3>Description</h3>
 
-        <p>The reign of House Targaryen begins: House of the Dragon, the prequel to Game of Thrones, is here. Based on George R.R. Martin’s “Fire & Blood,” the series, which is set 200 years before the events of Game of Thrones, tells the story of House Targaryen.
-
-House of the Dragon stars Paddy Considine (HBO’s The Third Day and The Outsider), Matt Smith (Doctor Who), Olivia Cooke, Emma D’Arcy, Steve Toussaint (It’s a Sin, Doctor Who), Eve Best, Sonoya Mizuno, Fabien Frankel,</p>
+        <p>An internal succession war within House Targaryen 
+            at the height of its power, 172 years before the 
+            birth of Daenerys Targaryen.</p>
     </div>
-
-
 </body>
 </html>
